--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="alex is a Personal Portfolio Template">
-    <meta name="keywords" content="mhbthemes, resume, cv, portfolio, personal, developer, designer,personal resume, onepage, clean, modern">
-    <meta name="author" content="Alex Smith">
+    <meta name="description" content="badgepirates making badges for fun and no profit">
+    <meta name="keywords" content="badge life hackers custom badges electronis">
+    <meta name="author" content="Badge Pirates">
 
     <title>Badgepirates</title>
 
